candle-einops-macros/tests/ui/fail/einsum-missing-arrow.stderr
error: einsum equation requires exactly one explicit `->`
 --> tests/ui/fail/einsum-missing-arrow.rs:4:21
  |
4 |     let _ = einsum!("row column", ());
  |                     ^^^^^^^^^^^^
